feat: complete standard 100% audit logging for all success and error actions across all 20 form controllers
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>